--- a/libwebrtc/CMakeLists.txt
+++ b/libwebrtc/CMakeLists.txt
@@ -56,14 +56,29 @@ if (MSVC)
 endif()
 
 # Install library
-if (MSVC)
+if (WIN32)
+	set(LIBRARY_FILENAME_DEBUG "webrtcd.lib")
+	set(LIBRARY_FILENAME_RELEASE "webrtc.lib")
+else()
+	set(LIBRARY_FILENAME_DEBUG "libwebrtcd.a")
+	set(LIBRARY_FILENAME_RELEASE "libwebrtc.a")
+endif()
+if (CMAKE_GENERATOR MATCHES "Visual Studio")
 	install(FILES ${WEBRTC_BUILD_DIR}/Debug/obj/webrtc.lib DESTINATION lib RENAME "webrtcd.lib" CONFIGURATIONS Debug)
-	install(FILES ${WEBRTC_BUILD_DIR}/Release/obj/webrtc.lib DESTINATION lib RENAME "webrtc.lib" CONFIGURATIONS Release)
+	install(FILES ${WEBRTC_BUILD_DIR}/Release/obj/webrtc.lib DESTINATION lib CONFIGURATIONS Release)
 else ()
 	if (CMAKE_BUILD_TYPE STREQUAL "Debug")
-		install(FILES ${WEBRTC_BUILD_DIR}/obj/libwebrtc.a DESTINATION lib RENAME "libwebrtcd.a")
+		if (WIN32)
+			install(FILES ${WEBRTC_BUILD_DIR}/obj/webrtc.lib DESTINATION lib RENAME "webrtcd.lib")
+		else()
+			install(FILES ${WEBRTC_BUILD_DIR}/obj/libwebrtc.a DESTINATION lib RENAME "libwebrtcd.a")
+		endif()
 	else ()
-		install(FILES ${WEBRTC_BUILD_DIR}/obj/libwebrtc.a DESTINATION lib RENAME "libwebrtc.a")
+		if (WIN32)
+			install(FILES ${WEBRTC_BUILD_DIR}/obj/webrtc.lib DESTINATION lib)
+		else()
+			install(FILES ${WEBRTC_BUILD_DIR}/obj/libwebrtc.a DESTINATION lib)
+		endif()
 	endif ()
 endif ()
 
@@ -75,7 +90,7 @@ install(FILES
 	DESTINATION "lib/cmake/LibWebRTC"
 )
 
-if (MSVC)
+if (CMAKE_GENERATOR MATCHES "Visual Studio")
 	install(FILES LibWebRTCTargets-debug.cmake DESTINATION "lib/cmake/LibWebRTC" CONFIGURATIONS Debug)
 	install(FILES LibWebRTCTargets-release.cmake DESTINATION "lib/cmake/LibWebRTC" CONFIGURATIONS Release)
 else ()
