Add an option to disable the use of internal Clang compiler

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ set(CMAKE_CONFIGURATION_TYPES Debug Release CACHE STRING INTERNAL FORCE)
 
 project(libwebrtc)
 
+set(USE_CLANG ON CACHE BOOL "Build using internal Clang compiler (set to OFF to build using system GCC/MSVC)")
 set(GN_EXTRA_ARGS "" CACHE STRING "Extra 'gn gen' arguments to pass when configuring WebRTC")
 set(NINJA_ARGS "" CACHE STRING "Ninja arguments to pass when compiling WebRTC")
 option(BUILD_DEB_PACKAGE "Build .deb package" OFF)
