--- a/libwebrtc/LibWebRTCConfig.cmake.in
+++ b/libwebrtc/LibWebRTCConfig.cmake.in
@@ -36,7 +36,7 @@ set(LIBWEBRTC_DEFINITIONS_DEBUG "@LIBWEBRTC_DEFINITIONS_DEBUG@")
 set(LIBWEBRTC_DEFINITIONS_RELEASE "@LIBWEBRTC_DEFINITIONS_RELEASE@")
 
 # The location of the UseLibWebRTC.cmake file.
-set(LIBWEBRTC_CMAKE_DIR "@CMAKE_INSTALL_PREFIX@/lib/cmake/LibWebRTC")
+set(LIBWEBRTC_CMAKE_DIR "${CMAKE_CURRENT_LIST_DIR}")
 set(LIBWEBRTC_USE_FILE "${LIBWEBRTC_CMAKE_DIR}/UseLibWebRTC.cmake")
 
 # Import LibWebRTC targets.
